# rust-tdsr

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  INSTALL.md  MIGRATION.md  README.md  TESTING.md  TROUBLESHOOTING.md  WSL.md  build.sh
examples/: test_wsl_speech.rs
plugins/: README.md  example.py
src/: clipboard.rs  error.rs  lib.rs  main.rs  platform.rs  symbols.rs
src/input/: buffer_handler.rs  config_handler.rs  copy_handler.rs  default_handler.rs  handler.rs  keymap.rs  mod.rs
src/plugins/: mod.rs
src/review/: mod.rs
src/speech/: buffer.rs  mod.rs  synth.rs
src/speech/backends/: mod.rs  native.rs  pulseaudio.rs  windows.rs
src/state/: config.rs  mod.rs  phonetics.rs
src/terminal/: cell.rs  emulator.rs  mod.rs  performer.rs  pty.rs  screen.rs  util.rs
tests/: config_test.rs  input_test.rs  speech_test.rs
